// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Canonical persian/afghanistan IDX page A11y I can see the skip to content link 1`] = `"مشاهده محتوا"`;

exports[`Canonical persian/afghanistan IDX page Analytics ATI 1`] = `"<img height=\\"1px\\" width=\\"1px\\" alt=\\"\\" style=\\"position:absolute\\" src=\\"https://logws1363.ati-host.net?s=598343&amp;s2=69&amp;p=persian.afghanistan.page&amp;x1=[urn:bbc:cps:3cda1d8c-ffa2-03ae-e050-380a4e8056f3]&amp;x2=[responsive]&amp;x3=[news-persian]&amp;x4=[fa]&amp;x7=[index-section]&amp;x8=[simorgh-nojs]&amp;x9=[صفحه+افغانستان+-+BBC+News+فارسی]&amp;x11=[2016-09-20T16:06:44.000Z]&amp;x12=[2020-05-20T12:02:54.000Z]\\"/>"`;

exports[`Canonical persian/afghanistan IDX page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/persian"`;

exports[`Canonical persian/afghanistan IDX page Footer I can see the footer copyright and external linking text 1`] = `"© 2020 بی بی سی. بی بی سی مسئول محتوای سایت های دیگر نیست. سیاست ما درباره لینک دادن به سایت های دیگر."`;

exports[`Canonical persian/afghanistan IDX page Footer Link should match text and url 1`] = `
Object {
  "text": "BBC News, فارسی",
  "url": "/persian",
}
`;

exports[`Canonical persian/afghanistan IDX page Footer Link should match text and url 2`] = `
Object {
  "text": "چرا می‌توانید به بی‌بی‌سی اطمینان کنید؟",
  "url": "https://www.bbc.com/persian/institutional-49283091",
}
`;

exports[`Canonical persian/afghanistan IDX page Footer Link should match text and url 3`] = `
Object {
  "text": "شرایط استفاده",
  "url": "https://www.bbc.com/persian/institutional-37474133",
}
`;

exports[`Canonical persian/afghanistan IDX page Footer Link should match text and url 4`] = `
Object {
  "text": "درباره بی بی سی",
  "url": "https://www.bbc.com/persian/institutional-37474136",
}
`;

exports[`Canonical persian/afghanistan IDX page Footer Link should match text and url 5`] = `
Object {
  "text": "سیاست حفظ حریم خصوصی",
  "url": "https://www.bbc.com/persian/institutional-37540067",
}
`;

exports[`Canonical persian/afghanistan IDX page Footer Link should match text and url 6`] = `
Object {
  "text": "کوکی ها",
  "url": "https://www.bbc.co.uk/usingthebbc/cookies/",
}
`;

exports[`Canonical persian/afghanistan IDX page Footer Link should match text and url 7`] = `
Object {
  "text": "تماس با بی بی سی",
  "url": "https://www.bbc.com/persian/institutional-37542244",
}
`;

exports[`Canonical persian/afghanistan IDX page Footer Link should match text and url 8`] = `
Object {
  "text": "AdChoices / Do Not Sell My Info",
  "url": "https://www.bbc.com/usingthebbc/cookies/how-can-i-change-my-bbc-cookie-settings/",
}
`;

exports[`Canonical persian/afghanistan IDX page Footer Link should match text and url 9`] = `
Object {
  "text": "سیاست ما درباره لینک دادن به سایت های دیگر.",
  "url": "https://www.bbc.com/persian/institutional/2011/04/000001_links",
}
`;

exports[`Canonical persian/afghanistan IDX page Header I can see the branding 1`] = `"BBC News, فارسی"`;

exports[`Canonical persian/afghanistan IDX page Header Navigation link should match text and url 1`] = `
Object {
  "text": "صفحه اول",
  "url": "/persian",
}
`;

exports[`Canonical persian/afghanistan IDX page Header Navigation link should match text and url 2`] = `
Object {
  "text": "کرونا",
  "url": "/persian/science-52004647",
}
`;

exports[`Canonical persian/afghanistan IDX page Header Navigation link should match text and url 3`] = `
Object {
  "text": "پخش زنده",
  "url": "/persian/media-49522521",
}
`;

exports[`Canonical persian/afghanistan IDX page Header Navigation link should match text and url 4`] = `
Object {
  "text": "ویدیو",
  "url": "/persian/media/video",
}
`;

exports[`Canonical persian/afghanistan IDX page Header Navigation link should match text and url 5`] = `
Object {
  "text": "تلویزیون",
  "url": "/persian/tv-and-radio-37434377",
}
`;

exports[`Canonical persian/afghanistan IDX page Header Navigation link should match text and url 6`] = `
Object {
  "text": "رادیو",
  "url": "/persian/tv-and-radio-37434376",
}
`;

exports[`Canonical persian/afghanistan IDX page Header Navigation link should match text and url 7`] = `
Object {
  "text": "ايران",
  "url": "/persian/iran",
}
`;

exports[`Canonical persian/afghanistan IDX page Header Navigation link should match text and url 8`] = `
Object {
  "text": "صفحه فعلی, افغانستان",
  "url": "/persian/afghanistan",
}
`;

exports[`Canonical persian/afghanistan IDX page Header Navigation link should match text and url 9`] = `
Object {
  "text": "جهان",
  "url": "/persian/world",
}
`;

exports[`Canonical persian/afghanistan IDX page Header Navigation link should match text and url 10`] = `
Object {
  "text": "هنر",
  "url": "/persian/arts",
}
`;

exports[`Canonical persian/afghanistan IDX page Header Navigation link should match text and url 11`] = `
Object {
  "text": "ورزش",
  "url": "/persian/sport",
}
`;

exports[`Canonical persian/afghanistan IDX page Header Navigation link should match text and url 12`] = `
Object {
  "text": "اقتصاد",
  "url": "/persian/business",
}
`;

exports[`Canonical persian/afghanistan IDX page Header Navigation link should match text and url 13`] = `
Object {
  "text": "دانش",
  "url": "/persian/science",
}
`;

exports[`Canonical persian/afghanistan IDX page Header Navigation link should match text and url 14`] = `
Object {
  "text": "ناظران می‌گویند",
  "url": "/persian/blogs/viewpoints",
}
`;

exports[`Canonical persian/afghanistan IDX page Main heading should match text 1`] = `"صفحه افغانستان"`;

exports[`Canonical persian/afghanistan IDX page SEO Apple Touch Icon should match attributes 1`] = `
Object {
  "sizes": null,
  "url": "http://localhost:7080/persian/images/icons/icon-192x192.png",
}
`;

exports[`Canonical persian/afghanistan IDX page SEO Apple Touch Icon should match attributes 2`] = `
Object {
  "sizes": "72x72",
  "url": "https://news.files.bbci.co.uk/include/articles/public/persian/images/icons/icon-72x72.png",
}
`;

exports[`Canonical persian/afghanistan IDX page SEO Apple Touch Icon should match attributes 3`] = `
Object {
  "sizes": "96x96",
  "url": "https://news.files.bbci.co.uk/include/articles/public/persian/images/icons/icon-96x96.png",
}
`;

exports[`Canonical persian/afghanistan IDX page SEO Apple Touch Icon should match attributes 4`] = `
Object {
  "sizes": "128x128",
  "url": "https://news.files.bbci.co.uk/include/articles/public/persian/images/icons/icon-128x128.png",
}
`;

exports[`Canonical persian/afghanistan IDX page SEO Apple Touch Icon should match attributes 5`] = `
Object {
  "sizes": "144x144",
  "url": "https://news.files.bbci.co.uk/include/articles/public/persian/images/icons/icon-144x144.png",
}
`;

exports[`Canonical persian/afghanistan IDX page SEO Apple Touch Icon should match attributes 6`] = `
Object {
  "sizes": "152x152",
  "url": "https://news.files.bbci.co.uk/include/articles/public/persian/images/icons/icon-152x152.png",
}
`;

exports[`Canonical persian/afghanistan IDX page SEO Apple Touch Icon should match attributes 7`] = `
Object {
  "sizes": "180x180",
  "url": "https://news.files.bbci.co.uk/include/articles/public/persian/images/icons/icon-180x180.png",
}
`;

exports[`Canonical persian/afghanistan IDX page SEO Apple Touch Icon should match attributes 8`] = `
Object {
  "sizes": "192x192",
  "url": "https://news.files.bbci.co.uk/include/articles/public/persian/images/icons/icon-192x192.png",
}
`;

exports[`Canonical persian/afghanistan IDX page SEO Apple Touch Icon should match attributes 9`] = `
Object {
  "sizes": "384x384",
  "url": "https://news.files.bbci.co.uk/include/articles/public/persian/images/icons/icon-384x384.png",
}
`;

exports[`Canonical persian/afghanistan IDX page SEO Apple Touch Icon should match attributes 10`] = `
Object {
  "sizes": "512x512",
  "url": "https://news.files.bbci.co.uk/include/articles/public/persian/images/icons/icon-512x512.png",
}
`;

exports[`Canonical persian/afghanistan IDX page SEO Canonical link 1`] = `"http://localhost:7080/persian/afghanistan"`;

exports[`Canonical persian/afghanistan IDX page SEO Dir attribute 1`] = `"rtl"`;

exports[`Canonical persian/afghanistan IDX page SEO FB admins 1`] = `"100004154058350"`;

exports[`Canonical persian/afghanistan IDX page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`Canonical persian/afghanistan IDX page SEO Heading level 1 1`] = `"صفحه افغانستان"`;

exports[`Canonical persian/afghanistan IDX page SEO Lang attribute 1`] = `"fa"`;

exports[`Canonical persian/afghanistan IDX page SEO Linked data should match text 1`] = `
Object {
  "@context": "http://schema.org",
  "@graph": Array [
    Object {
      "@type": "WebPage",
      "image": Object {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://news.files.bbci.co.uk/ws/img/logos/og/persian.png",
        "width": 1024,
      },
      "mainEntityOfPage": Object {
        "@id": "http://localhost:7080/persian/afghanistan",
        "@type": "WebPage",
        "name": "صفحه افغانستان",
      },
      "publisher": Object {
        "@type": "NewsMediaOrganization",
        "logo": Object {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/persian.png",
          "width": 1024,
        },
        "name": "BBC News فارسی",
        "publishingPrinciples": "https://www.bbc.com/persian/institutional-49283091",
      },
      "thumbnailUrl": "https://news.files.bbci.co.uk/ws/img/logos/og/persian.png",
      "url": "http://localhost:7080/persian/afghanistan",
    },
  ],
}
`;

exports[`Canonical persian/afghanistan IDX page SEO OG description 1`] = `"سایت فارسی بی‌بی‌سی تازه‌ترین اخبار و گزارش ها درباره ایران و افغانستان و جهان در حوزه سیاست، اقتصاد، جامعه و فرهنگ و همچنین ویدیو، گزارش‌های تصویری و برنامه‌های تلویزیون فارسی را به شما ارائه می‌دهد."`;

exports[`Canonical persian/afghanistan IDX page SEO OG image 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/persian.png"`;

exports[`Canonical persian/afghanistan IDX page SEO OG image alt 1`] = `"BBC News فارسی"`;

exports[`Canonical persian/afghanistan IDX page SEO OG locale 1`] = `"fa"`;

exports[`Canonical persian/afghanistan IDX page SEO OG site name 1`] = `"BBC News فارسی"`;

exports[`Canonical persian/afghanistan IDX page SEO OG title 1`] = `"صفحه افغانستان - BBC News فارسی"`;

exports[`Canonical persian/afghanistan IDX page SEO OG type 1`] = `"website"`;

exports[`Canonical persian/afghanistan IDX page SEO OG url 1`] = `"http://localhost:7080/persian/afghanistan"`;

exports[`Canonical persian/afghanistan IDX page SEO Page title 1`] = `"صفحه افغانستان - BBC News فارسی"`;

exports[`Canonical persian/afghanistan IDX page SEO Robots meta tag 1`] = `"noodp,noydir"`;

exports[`Canonical persian/afghanistan IDX page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`Canonical persian/afghanistan IDX page SEO Twitter creator 1`] = `"@bbcpersian"`;

exports[`Canonical persian/afghanistan IDX page SEO Twitter description 1`] = `"سایت فارسی بی‌بی‌سی تازه‌ترین اخبار و گزارش ها درباره ایران و افغانستان و جهان در حوزه سیاست، اقتصاد، جامعه و فرهنگ و همچنین ویدیو، گزارش‌های تصویری و برنامه‌های تلویزیون فارسی را به شما ارائه می‌دهد."`;

exports[`Canonical persian/afghanistan IDX page SEO Twitter image alt 1`] = `"BBC News فارسی"`;

exports[`Canonical persian/afghanistan IDX page SEO Twitter image src 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/persian.png"`;

exports[`Canonical persian/afghanistan IDX page SEO Twitter site 1`] = `"@bbcpersian"`;

exports[`Canonical persian/afghanistan IDX page SEO Twitter title 1`] = `"صفحه افغانستان - BBC News فارسی"`;

exports[`Canonical persian/afghanistan IDX page Sections should match headline text 1`] = `"ویدیو و صدا"`;

exports[`Canonical persian/afghanistan IDX page Sections should match headline text 2`] = `"برنامه‌های رادیو"`;

exports[`Canonical persian/afghanistan IDX page Sections should match headline text 3`] = `"تحلیل و گزارش"`;

exports[`Canonical persian/afghanistan IDX page Story Promo Headline should match text 1`] = `"ویدیو, ابراز نگرانی سازمان ملل از افزایش کشتار غیر نظامیان در افغانستان, 2,32"`;

exports[`Canonical persian/afghanistan IDX page Story Promo Image should match image 1`] = `
<img
  alt="ابراز نگرانی سازمان ملل از افزایش کشتار غیر نظامیان در افغانستان"
  class="StyledImg-sc-7vx2mr-0 hIxkbt"
  sizes="(max-width: 600px) 100vw, (max-width: 1008px) 50vw, 496px"
  src="https://ichef.bbci.co.uk/news/660/cpsprodpb/69E2/production/_112360172_p08dlh0q.jpg"
  srcset="https://ichef.bbci.co.uk/news/70/cpsprodpb/69E2/production/_112360172_p08dlh0q.jpg 70w, https://ichef.bbci.co.uk/news/95/cpsprodpb/69E2/production/_112360172_p08dlh0q.jpg 95w, https://ichef.bbci.co.uk/news/144/cpsprodpb/69E2/production/_112360172_p08dlh0q.jpg 144w, https://ichef.bbci.co.uk/news/183/cpsprodpb/69E2/production/_112360172_p08dlh0q.jpg 183w, https://ichef.bbci.co.uk/news/240/cpsprodpb/69E2/production/_112360172_p08dlh0q.jpg 240w, https://ichef.bbci.co.uk/news/320/cpsprodpb/69E2/production/_112360172_p08dlh0q.jpg 320w, https://ichef.bbci.co.uk/news/660/cpsprodpb/69E2/production/_112360172_p08dlh0q.jpg 660w"
  width="976"
/>
`;
